<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:contentDescription="@string/text"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/репетитор"
        android:textColor="#407C79"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:contentDescription="@string/avatarka"
        android:id="@+id/imageView4"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ww1"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:contentDescription="@string/text"
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/рикардо"
        android:textColor="@color/goluboi"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:contentDescription="@string/decor"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/ww2" />


    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ww3"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/decor"
        android:text="@string/английский_родной"
        android:textColor="@color/goluboi"
        android:textSize="27sp"
        app:layoutDescription="@string/text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ww4" />

    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView15"
        android:layout_width="190dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/ww5" />

    <ImageView
        android:contentDescription="@string/decor"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView24"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/ww6" />

    <TextView
        app:layoutDescription="@string/text"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/контакты"
        android:textColor="@color/goluboi"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView12"
        android:layout_width="80dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/t1"
        android:layout_marginStart="50dp"/>

    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView13"
        android:layout_width="80dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/t2" />


    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView14"
        android:layout_width="80dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/t3" />


    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView24"
        android:layout_width="80dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/t4" />

    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/palka_gol" />

    <ImageView
        android:contentDescription="@string/words"
        android:id="@+id/imageView27"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw1" />

    <ImageView
        android:contentDescription="@string/book"
        android:id="@+id/imageView28"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView27"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw2" />

    <ImageView
        android:contentDescription="@string/grammar"
        android:id="@+id/imageView29"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw3" />

    <ImageView
        android:contentDescription="@string/listening"
        android:id="@+id/imageView31"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
        app:layout_constraintStart_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toTopOf="@+id/imageView29"
        app:srcCompat="@drawable/qw4" />

    <ImageView
        android:contentDescription="@string/profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw5"
        android:layout_marginStart="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>