<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:contentDescription="@string/french"
        android:id="@+id/imageView5"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/w6" />


    <ImageView
        android:contentDescription="@string/middle"
        android:id="@+id/imageView6"
        android:layout_width="65dp"
        android:layout_height="85dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/w8" />


    <ImageView
        android:contentDescription="@string/it"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:srcCompat="@drawable/w7" />


    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView8"
        android:layout_width="170dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/w9" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:orientation="vertical">


            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/r1" />

            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                app:srcCompat="@drawable/r2" />

            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                app:srcCompat="@drawable/r3" />

            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                app:srcCompat="@drawable/r4" />

            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                app:srcCompat="@drawable/r5" />

            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                app:srcCompat="@drawable/r6" />

            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                app:srcCompat="@drawable/r7" />

            <ImageView
                android:contentDescription="@string/decor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-110dp"
                app:srcCompat="@drawable/r8" />
        </LinearLayout>

    </ScrollView>

    <ImageView
        android:contentDescription="@string/decor"
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/palka_gol" />

    <ImageView
        android:contentDescription="@string/words"
        android:id="@+id/imageView27"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw1" />

    <ImageView
        android:contentDescription="@string/book"
        android:id="@+id/imageView28"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView27"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw2" />

    <ImageView
        android:contentDescription="@string/grammar"
        android:id="@+id/imageView29"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw3" />

    <ImageView
        android:contentDescription="@string/listening"
        android:id="@+id/imageView31"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
        app:layout_constraintStart_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toTopOf="@+id/imageView29"
        app:srcCompat="@drawable/qw4" />

    <ImageView
        android:contentDescription="@string/profile"
        android:id="@+id/ava"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView26"
        app:srcCompat="@drawable/qw5"
        android:layout_marginStart="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>